[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "image-resize-comfyui"
version = "1.0.0"
description = "Advanced image resizing node for ComfyUI with aspect ratio preservation and mask support"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Wladimir Palant", email = ""},
]
keywords = ["comfyui", "image", "resize", "crop", "pad", "mask"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "torch",
    "torchvision",
    "pillow",
    "numpy",
]

[project.urls]
Repository = "https://github.com/ussoewwin/image-resize-comfyui"

